Adding support for teams.xml.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-08-31 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Adding support for teams.xml.
+
 2011-08-30 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed bug #34175, random bot wasn't random.
