--- a/liquidwar6/doc/ldr-gdoc.texi
+++ b/liquidwar6/doc/ldr-gdoc.texi
@@ -114,6 +114,30 @@ Reads the map body, that is, all the layers.
 @strong{Return value:}  1 if OK, 0 if failed.
 @end deftypefun
 
+@deftypefun {void} {lw6ldr_hints_defaults} (lw6ldr_hints_t * @var{hints})
+@var{hints}:  data to initialize
+
+Set the hints struct to its defaults.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6ldr_hints_zero} (lw6ldr_hints_t * @var{hints})
+@var{hints}:  data to initialize
+
+Zeros the hints struct, this is not the same as setting to defaults.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6ldr_hints_clear} (lw6ldr_hints_t * @var{hints})
+@var{hints}:  data to initialize
+
+Clears the hints struct, this is not the same as setting to defaults.
+
+@strong{Return value:}  none.
+@end deftypefun
+
 @deftypefun {int} {lw6ldr_hints_read} (lw6ldr_hints_t * @var{hints}, char * @var{dirname})
 @var{dirname}:  the directory of the map
 
@@ -138,6 +162,25 @@ type automatically when storing it in the structure.
 @strong{Return value:}  1 if success, 0 if failed. Note that while 0 really
 means there's a problem, some affectations can fail and return 1,
 needs to be worked on.
+@end deftypefun
+
+@deftypefun {char *} {lw6ldr_hints_get} (lw6ldr_hints_t * @var{hints}, char * @var{key})
+@var{hints}:  the hints to modify
+
+@var{key}:  the key to modify
+
+Gets one single parameter in a hints structure. Value is
+converted as a string.
+
+@strong{Return value:}  dynamically allocated string, NULL on error.
+@end deftypefun
+
+@deftypefun {char *} {lw6ldr_hints_get_default} (char * @var{key})
+@var{key}:  the key we want informations about.
+
+Gets the default value for a given hints key.
+
+@strong{Return value:}  dynamically allocated string, NULL on error.
 @end deftypefun
 
 @deftypefun {int} {lw6ldr_hints_update} (lw6ldr_hints_t * @var{hints}, lw6sys_assoc_t * @var{values})
@@ -238,6 +281,14 @@ Print to a file a typical map hints.xml file.
 @var{f}:  file to output content to
 
 Print to a file a typical map style.xml file.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6ldr_print_example_teams_xml} (FILE * @var{f})
+@var{f}:  file to output content to
+
+Print to a file a typical map teams.xml file.
 
 @strong{Return value:}  none.
 @end deftypefun
@@ -373,6 +424,30 @@ and values already initialized, either zeroed or filled in with defaults
 or custom values. Not all parameters need be defined in values. It can
 even be NULL. The idea is just that if something is defined in values,
 it will override the existing style.
+
+@strong{Return value:}  1 if success, 0 if failed.
+@end deftypefun
+
+@deftypefun {int} {lw6ldr_teams_read} (lw6map_teams_t * @var{teams}, char * @var{dirname})
+@var{dirname}:  the directory of the map
+
+Read the teams (teams.xml) of a map. Pointer to teams must be valid,
+and values already initialized, either zeroed or filled in with defaults
+or custom values.
+
+@strong{Return value:}  1 if success, 0 if failed.
+@end deftypefun
+
+@deftypefun {int} {lw6ldr_teams_update} (lw6map_teams_t * @var{teams}, lw6sys_assoc_t * @var{values})
+@var{teams}:  the teams struct to fill with values (read/write parameter)
+
+@var{values}:  an assoc containing strings with the new values
+
+Overrides teams with values. Pointer to teams must be valid,
+and values already initialized, either zeroed or filled in with defaults
+or custom values. Not all parameters need be defined in values. It can
+even be NULL. The idea is just that if something is defined in values,
+it will override the existing teams.
 
 @strong{Return value:}  1 if success, 0 if failed.
 @end deftypefun
