--- a/liquidwar6/doc/funcs-selfdoc.texi
+++ b/liquidwar6/doc/funcs-selfdoc.texi
@@ -690,6 +690,11 @@ Wrapper on lw6map_get_look.
 Wrapper on lw6map_get_music_dir.
 @end deffn
 
+@subsection c-lw6map-param-get
+@deffn {C function exported to Guile} @code{c-lw6map-param-get}
+Wrapper on lw6map_param_get.
+@end deffn
+
 @subsection c-lw6map-rules-get-default
 @deffn {C function exported to Guile} @code{c-lw6map-rules-get-default}
 Wrapper on lw6map_rules_get_default.
