Added support for teams.xml

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,6 +1,6 @@
 2011-08-31 : Christian Mauduit <ufoot@ufoot.org>
 
-	* Adding support for teams.xml.
+	* Added support for teams.xml.
 
 2011-08-30 : Christian Mauduit <ufoot@ufoot.org>
 
