--- a/liquidwar6/doc/funcs-selfdoc.texi
+++ b/liquidwar6/doc/funcs-selfdoc.texi
@@ -730,9 +730,29 @@ Wrapper on lw6map_team_color_index_to_key.
 Wrapper on lw6map_team_color_key_to_index.
 @end deffn
 
+@subsection c-lw6map-team-color-list
+@deffn {C function exported to Guile} @code{c-lw6map-team-color-list}
+Wrapper on lw6map_team_color_list.
+@end deffn
+
 @subsection c-lw6map-teams-get-default
 @deffn {C function exported to Guile} @code{c-lw6map-teams-get-default}
 Wrapper on lw6map_teams_get_default.
+@end deffn
+
+@subsection c-lw6map-weapon-index-to-key
+@deffn {C function exported to Guile} @code{c-lw6map-weapon-index-to-key}
+Wrapper on lw6map_weapon_index_to_key.
+@end deffn
+
+@subsection c-lw6map-weapon-key-to-index
+@deffn {C function exported to Guile} @code{c-lw6map-weapon-key-to-index}
+Wrapper on lw6map_weapon_key_to_index.
+@end deffn
+
+@subsection c-lw6map-weapon-list
+@deffn {C function exported to Guile} @code{c-lw6map-weapon-list}
+Wrapper on lw6map_weapon_list.
 @end deffn
 
 @subsection c-lw6net-init
