--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2011-08-31 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Implemented ESCAPE weapon.
+
 	* Added support for teams.xml.
 
 2011-08-30 : Christian Mauduit <ufoot@ufoot.org>
