--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-09-01 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Moved all player colors conf to teams.xml.
+
 2011-08-31 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Implemented ESCAPE weapon.
