--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-09-02 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Made double-click usage an option.
+
 2011-09-01 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Introduced level chaining function.
