--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-09-05 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Closed #34060.
+
 2011-09-02 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Made double-click usage an option.
