--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-09-06 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Implemented internal backtrace facility.
+
 2011-09-05 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Closed #34060.
