--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,9 @@
+2011-09-07 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Added dependency graph in docs.
+
+	* Refined spread options (optimization)
+
 2011-09-06 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Increased the message and i/o rate.
