--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,9 @@
+2011-09-08 : Christian Mauduit <ufoot@ufoot.org>
+
+	* New widescreen fumes.png by Kasper Hviid.
+
+	* Added mod-gl planned optimized layout (.xcf doc).
+
 2011-09-07 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added dependency graph in docs.
