--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-09-09 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Changed map size limits, documented it.
+
 2011-09-08 : Christian Mauduit <ufoot@ufoot.org>
 
 	* New widescreen fumes.png by Kasper Hviid.
