Introduced Russian translation (still partial).

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-09-20 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Introduced Russian translation (still partial).
+
 2011-09-09 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Changed map size limits, documented it.
