--- a/liquidwar6/po/fr.po
+++ b/liquidwar6/po/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: liquidwar6 dev\n"
 "Report-Msgid-Bugs-To: ufoot@ufoot.org\n"
-"POT-Creation-Date: 2011-09-09 21:31+0200\n"
+"POT-Creation-Date: 2011-09-20 20:55+0200\n"
 "PO-Revision-Date: 2008-12-30 21:46+0100\n"
 "Last-Translator: Christian Mauduit <ufoot@ufoot.org>\n"
 "Language-Team: French <traduc@traduc.org>\n"
@@ -197,7 +197,7 @@ msgstr "impossible de lire la ligne de 'credits' %d"
 #: src/lib/ldr/ldr-exp.c:60
 #, c-format
 msgid "You just gained experience (exp=%d)."
-msgstr ""
+msgstr "Vous venez de gagner de l'expérience (exp=%d)."
 
 #: src/lib/lw6-fix.c:252
 msgid "couldn't fix environment variable by restarting program"
@@ -269,11 +269,6 @@ msgstr "environ %d méga-octets disponibles"
 #: src/lib/lw6-print.c:870
 msgid "goodbye"
 msgstr "au revoir"
-
-#: src/lib/map/map-test.c:425
-#, c-format
-msgid "exp=%d highest_color=%d highest_weapon=%d"
-msgstr ""
 
 #: src/lib/p2p/p2p-data.c:100
 #, c-format
@@ -454,7 +449,7 @@ msgstr "~a (joy2)"
 
 #: src/scriptpo.c:14
 msgid "~a (custom)"
-msgstr "~a (util.)"
+msgstr "~a (sur mesure)"
 
 #: src/scriptpo.c:16
 msgid "scheme error"
@@ -536,7 +531,7 @@ msgstr "Pas de bruits d'eau"
 
 #: src/scriptpo.c:37
 msgid "Water sounds ~a%"
-msgstr "Bruits d'eau"
+msgstr "Bruits d'eau ~a%"
 
 #: src/scriptpo.c:38
 msgid "No music"
@@ -685,32 +680,31 @@ msgstr "Libre"
 
 #: src/scriptpo.c:78
 msgid "No bots"
-msgstr ""
+msgstr "Pas de bots"
 
 #: src/scriptpo.c:79
 msgid "One bot"
-msgstr ""
+msgstr "Un seul bot"
 
 #: src/scriptpo.c:80
 msgid "~a bots"
-msgstr ""
+msgstr "~a bots"
 
 #: src/scriptpo.c:81 src/scriptpo.c:94
 msgid "Players"
 msgstr "Joueurs"
 
 #: src/scriptpo.c:82
-#, fuzzy
 msgid "Solo game"
-msgstr "Jeu local"
+msgstr "Jeu solo"
 
 #: src/scriptpo.c:83
 msgid "1 on 1"
-msgstr ""
+msgstr "1 contre 1"
 
 #: src/scriptpo.c:84
 msgid "Local multiplayer"
-msgstr ""
+msgstr "Jeu local à plusieurs"
 
 #: src/scriptpo.c:85
 msgid "Join network game"
@@ -883,81 +877,3 @@ msgstr "test de la base de données"
 #: src/scriptpo.c:144
 msgid "testing node"
 msgstr "test du noeud"
-
-#~ msgid "Keep map ratio"
-#~ msgstr "Conserver les proportions"
-
-#~ msgid "Fit map to screen"
-#~ msgstr "Etaler sur tout l'écran"
-
-#~ msgid "Use texture"
-#~ msgstr "Texture utilisée"
-
-#~ msgid "Ignore texture"
-#~ msgstr "Texture ignorée"
-
-#~ msgid "Use XML files"
-#~ msgstr "Utiliser les fichiers XML"
-
-#~ msgid "Ignore XML files"
-#~ msgstr "Ignorer rules.xml"
-
-#~ msgid "Use ~a"
-#~ msgstr "Utiliser ~a"
-
-#~ msgid " and "
-#~ msgstr " et "
-
-#~ msgid "Map options"
-#~ msgstr "Options du tableau"
-
-#~ msgid "Cursors can have any color"
-#~ msgstr "Couleur des curseurs libre"
-
-#~ msgid "Can collaborate locally"
-#~ msgstr "Collaboration locale possible"
-
-#~ msgid "One cursor per team"
-#~ msgstr "Un curseur par équipe"
-
-#~ msgid "Map"
-#~ msgstr "Tableau"
-
-#~ msgid "red"
-#~ msgstr "rouge"
-
-#~ msgid "green"
-#~ msgstr "vert"
-
-#~ msgid "blue"
-#~ msgstr "bleu"
-
-#~ msgid "yellow"
-#~ msgstr "jaune"
-
-#~ msgid "cyan"
-#~ msgstr "cyan"
-
-#~ msgid "magenta"
-#~ msgstr "magenta"
-
-#~ msgid "orange"
-#~ msgstr "orange"
-
-#~ msgid "light blue"
-#~ msgstr "bleu ciel"
-
-#~ msgid "purple"
-#~ msgstr "violet"
-
-#~ msgid "pink"
-#~ msgstr "rose"
-
-#~ msgid "Unknown bot"
-#~ msgstr "Bot inconnu"
-
-#~ msgid "See log file for details."
-#~ msgstr "Voir le fichier de log pour plus d'informations"
-
-#~ msgid "unable to init flat_context"
-#~ msgstr "impossible d'initialiser flat_context"
