--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2011-09-23 : Christian Mauduit <ufoot@ufoot.org>
 
+	* New map texture limit at 3000x2000.
+
 	* Using GL_FEEDBACK instead of GL_SELECT, fixes #34349.
 
 2011-09-20 : Christian Mauduit <ufoot@ufoot.org>
