--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-09-24 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Russian translation by Z. Lezhnin.
+
 2011-09-23 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Using GL_FEEDBACK instead of GL_SELECT, fixes #34349.
