--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,6 +1,6 @@
 2011-09-24 : Christian Mauduit <ufoot@ufoot.org>
 
-	* Russian translation by Z. Lezhnin.
+	* Russian translation by Yevgeny Lezhnin.
 
 2011-09-23 : Christian Mauduit <ufoot@ufoot.org>
 
