--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-09-28 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Viewport set by hud.
+
 2011-09-24 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Russian translation by Yevgeny Lezhnin.
