--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2011-10-01 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Implemented triple-click for alt fire.
+
 	* Mouse dragging and scroll do work.
 
 2011-09-30 : Christian Mauduit <ufoot@ufoot.org>
